# mkdocs-pages-j2-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
pagesj2/: plugin.py
test/simple/: mkdocs.yml
test/simple/docs/: .pages  index.md  p1.md  p2.md  p3.md  pages.j2
