[tool.poetry]
name = "mkdocs-pages-j2-plugin"
version = "0.2.0"
description = "An MkDocs plugin to generate '.pages' from 'pages.j2'"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
repository = "https://github.com/supcik/mkdocs-pages-j2-plugin"
license = "Apache-2"
readme = "README.md"
packages = [{ include = "pagesj2" }]
keywords = ["mkdocs", "python", "markdown", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
jinja2 = "^3.1.2"
mkdocs-material = { version = "^9.1.15", optional = true }
mkdocs-macros-plugin = { version = "^1.0.1", optional = true }
mkdocs-awesome-pages-plugin = { version = "^2.9.1", optional = true }

[tool.poetry.extras]
test = [
    "mkdocs-material",
    "mkdocs-macros-plugin",
    "mkdocs-awesome-pages-plugin"
]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."mkdocs.plugins"]
pages-j2 = "pagesj2.plugin:PagesJ2Plugin"
